feat: add docker file

--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,7 @@ MINIO_USE_SSL=False
 MINIO_PRESIGNED_URLS=True
 
 DB_NAME=dms_db
-DB_USER=dms_user
+DB_USER=postgres
 DB_PASSWORD=dms_password
+DB_HOST=localhost
+DB_PORT=5432
